--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+main{
+  padding: 10px;
+  max-width: 95vw;
+  margin: 0 auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img
+{
+  width: 100%;
+  height:85%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header
+{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+}
+header a 
+{
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+}
+header a.logo
+{
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+header nav
+{
+  display:flex;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav
+{
+  margin: 10px 10px 10px 10px;
+}
+div .post
+{
+  display: flex;
+  flex-wrap: true;
+}
+.background
+{
+  background-color: rgb(233, 231, 231);
 }
